force-app/main/default/objects/Activation_line__c/Activation_line__c.object-meta.xml
<CustomObject>
    <description>For activating single line items, e.g. one SIM or one fiber installation</description>
    <label>Activation line</label>
    <nameField>
        <displayFormat>AL-{0000000}</displayFormat>
        <label>Activation Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activations lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>