force-app/main/default/objects/Activation_line__c/fields/Access_Method__c.field-meta.xml
<CustomField>
    <fullName>Access_Method__c</fullName>
    <inlineHelpText>Single: 1 VRF on CPE.
Multi Static: Multiple VRF on same CPE with dedicated bandwidth per VRF.
Multi Dynamic: Multiple VRF on same CPE with shared bandwidth.</inlineHelpText>
    <label>Access Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Access_Method</valueSetName>
    </valueSet>
</CustomField>