force-app/main/default/objects/Activation_line__c/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <description>Relation to Action object</description>
    <label>Activation</label>
    <referenceTo>Activation__c</referenceTo>
    <relationshipLabel>Activation lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>