force-app/main/default/objects/Activation_line__c/fields/Activation_Check__c.field-meta.xml
<CustomField>
    <fullName>Activation_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates Activation Line to Activation Check in order to run validation on this custom object</description>
    <label>Activation Check</label>
    <referenceTo>Activation_Check__c</referenceTo>
    <relationshipLabel>Activations lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>