force-app/main/default/objects/Activation_line__c/fields/Activation_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Activation_Fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MK - 06092021 - CPQ-14 - this checkbox will be true when the related activation is set to fulfilled.</description>
    <label>Activation Fulfilled</label>
    <type>Checkbox</type>
</CustomField>