force-app/main/default/objects/Activation_line__c/fields/Activation_ID__c.field-meta.xml
<CustomField>
    <fullName>Activation_ID__c</fullName>
    <formula>Activation__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation ID</label>
    <type>Text</type>
</CustomField>