force-app/main/default/objects/Activation_line__c/fields/Activation_Line_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line_Error_Code__c</fullName>
    <label>Activation Line Error Code</label>
    <type>TextArea</type>
</CustomField>