force-app/main/default/objects/Activation_line__c/fields/Activation_Line_SLA_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line_SLA_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger the Activation Line to start the SLA Flow</description>
    <label>Activation Line SLA Trigger</label>
    <type>Checkbox</type>
</CustomField>