force-app/main/default/objects/Activation_line__c/fields/Activation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Activation_Owner__c</fullName>
    <formula>Activation__r.Owner_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Owner</label>
    <type>Text</type>
</CustomField>