force-app/main/default/objects/Activation_line__c/fields/Actual_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_delivery_date__c</fullName>
    <label>Actual delivery date</label>
    <type>Date</type>
</CustomField>