force-app/main/default/objects/Activation_line__c/fields/Additional_services__c.field-meta.xml
<CustomField>
    <fullName>Additional_services__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>Additional services</label>
    <type>TextArea</type>
</CustomField>