force-app/main/default/objects/Activation_line__c/fields/Address_filled__c.field-meta.xml
<CustomField>
    <fullName>Address_filled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the flow &quot;Enrich activation lines with addresses&quot; to determine whether the activation line has had its address filled automatically. (Only relevant for data deliveries).</description>
    <label>Address filled</label>
    <type>Checkbox</type>
</CustomField>