force-app/main/default/objects/Activation_line__c/fields/AL_Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>AL_Planned_Delivery_Date__c</fullName>
    <label>Planned Delivery Date</label>
    <type>Date</type>
</CustomField>