force-app/main/default/objects/Activation_line__c/fields/Avg_Monthly_Data_Used__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Data_Used__c</fullName>
    <description>AVG_MONTHLY_DATA_CONSUMPTION_MB from fokus subscriptions</description>
    <inlineHelpText>Displays the average data consumption per month</inlineHelpText>
    <label>Avg Monthly Data Used (MB)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>