force-app/main/default/objects/Activation_line__c/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <inlineHelpText>If this is a new customer then an indication of different invoice units is needed by adding 1, 2, 3 etc - if billing units are to be in a hierarchy with more than 1 level under Root then indicate the parent BAN in the above &apos;Parent BAN&apos; field</inlineHelpText>
    <label>BAN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>