force-app/main/default/objects/Activation_line__c/fields/Billing_Account_Name_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name_For_Portal__c</fullName>
    <formula>Billing_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Name For Portal</label>
    <type>Text</type>
</CustomField>