force-app/main/default/objects/Activation_line__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <formula>TEXT(Billing_Account__r.BAN_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Number</label>
    <type>Text</type>
</CustomField>