force-app/main/default/objects/Activation_line__c/fields/Billing_Att_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_Att_F__c</fullName>
    <formula>Billing_Account__r.Billing_Att__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Att.</label>
    <type>Text</type>
</CustomField>