force-app/main/default/objects/Activation_line__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <inlineHelpText>To be exposed on customer invoice</inlineHelpText>
    <label>Billing City</label>
    <type>TextArea</type>
</CustomField>