force-app/main/default/objects/Activation_line__c/fields/Billing_City_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_F__c</fullName>
    <formula>Billing_Account__r.Billing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>