force-app/main/default/objects/Activation_line__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <inlineHelpText>To be exposed on customer invoice</inlineHelpText>
    <label>Billing Country</label>
    <type>TextArea</type>
</CustomField>