force-app/main/default/objects/Activation_line__c/fields/Billing_Country_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_F__c</fullName>
    <formula>Billing_Account__r.Billing_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>