force-app/main/default/objects/Activation_line__c/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <inlineHelpText>Name of Billing Account (to be exposed on customer invoice)</inlineHelpText>
    <label>Billing Name</label>
    <type>TextArea</type>
</CustomField>