force-app/main/default/objects/Activation_line__c/fields/Billing_Name_BAN__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name_BAN__c</fullName>
    <formula>Billing_Account__r.Billing_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Name BAN</label>
    <type>Text</type>
</CustomField>