force-app/main/default/objects/Activation_line__c/fields/Billing_Name_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name_F__c</fullName>
    <formula>Billing_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Name</label>
    <type>Text</type>
</CustomField>