force-app/main/default/objects/Activation_line__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <inlineHelpText>To be exposed on customer invoice</inlineHelpText>
    <label>Billing Postal Code</label>
    <type>TextArea</type>
</CustomField>