force-app/main/default/objects/Activation_line__c/fields/Billing_Postal_Code_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code_F__c</fullName>
    <formula>Billing_Account__r.Billing_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postal Code</label>
    <type>Text</type>
</CustomField>