force-app/main/default/objects/Activation_line__c/fields/Billing_Street_and_no__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_and_no__c</fullName>
    <inlineHelpText>To be exposed on customer invoice</inlineHelpText>
    <label>Billing Street and No</label>
    <type>TextArea</type>
</CustomField>