force-app/main/default/objects/Activation_line__c/fields/Billing_Street_and_No_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_and_No_F__c</fullName>
    <formula>Billing_Account__r.Billing_Street_and_no__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street and No</label>
    <type>Text</type>
</CustomField>