force-app/main/default/objects/Activation_line__c/fields/Calls_from_DK_to_EU__c.field-meta.xml
<CustomField>
    <fullName>Calls_from_DK_to_EU__c</fullName>
    <description>CALLS_FROM_DK_TO_EUNB_MIN from the Fokus subscriptions</description>
    <inlineHelpText>Displays the number of minutes of calls from DK to EU</inlineHelpText>
    <label>Calls from DK to EU (MIN)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>