force-app/main/default/objects/Activation_line__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used for linking the activation line to an activation case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activations lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>