force-app/main/default/objects/Activation_line__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>Temporary field to update activation lines that are missing the Case Lookup.</description>
    <formula>Activation__r.Case__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>