force-app/main/default/objects/Activation_line__c/fields/case_reference__c.field-meta.xml
<CustomField>
    <fullName>case_reference__c</fullName>
    <description>The refenrence used by email to case - we use it on activations and activation lines too be able to relate emails sent from these custom objects to the case.</description>
    <formula>Case__r.case_reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>case reference</label>
    <type>Text</type>
</CustomField>