force-app/main/default/objects/Activation_line__c/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <description>Circuit ID (kredsløbs-ID) for this activation line. Only relevant for data deliveries.</description>
    <inlineHelpText>TN number refering to the specific customer circuit (VRF specific)</inlineHelpText>
    <label>Circuit ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>