force-app/main/default/objects/Activation_line__c/fields/Circuit_ID_existing__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID_existing__c</fullName>
    <description>To accommodate order form to tech</description>
    <inlineHelpText>TN number of the old customer circuit to be moved</inlineHelpText>
    <label>Circuit ID (existing)</label>
    <type>TextArea</type>
</CustomField>