force-app/main/default/objects/Activation_line__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>Company name</inlineHelpText>
    <label>Company Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>