force-app/main/default/objects/Activation_line__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Add the Conference add on product on relevant number in for the billing setup to be set up correctly</inlineHelpText>
    <label>Conference</label>
    <type>Checkbox</type>
</CustomField>