force-app/main/default/objects/Activation_line__c/fields/Conference_Phones__c.field-meta.xml
<CustomField>
    <fullName>Conference_Phones__c</fullName>
    <description>Used for UC setup</description>
    <inlineHelpText>If confierence phone is part of the Quote then enter the relevant conference phone for the specific number</inlineHelpText>
    <label>Conference Phones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conference_Phones</valueSetName>
    </valueSet>
</CustomField>