force-app/main/default/objects/Activation_line__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>Contact_person_on_site__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact mobile on site - if contact data is to be updated it can only be done under Contacts in salesforce</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>