force-app/main/default/objects/Activation_line__c/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <formula>Contact_person_on_site__r.MobilePhone</formula>
    <label>Contact Mobile</label>
    <type>Text</type>
</CustomField>