force-app/main/default/objects/Activation_line__c/fields/Contact_person_on_site__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_on_site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact person on site - which is a contact under the account - if contact data is to be updated it can only be done under Contacts in salesforce</inlineHelpText>
    <label>Contact person on site</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activations lines</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>