force-app/main/default/objects/Activation_line__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>Contact_person_on_site__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact mobile on site - if contact data is to be updated it can only be done under Contacts in salesforce</inlineHelpText>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>