force-app/main/default/objects/Activation_line__c/fields/Country_code__c.field-meta.xml
<CustomField>
    <fullName>Country_code__c</fullName>
    <label>Country code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>