force-app/main/default/objects/Activation_line__c/fields/CPE_ID__c.field-meta.xml
<CustomField>
    <fullName>CPE_ID__c</fullName>
    <description>To accommodate order form to tech</description>
    <inlineHelpText>TN number refering to the physical CPE (VRF Bundle ID)</inlineHelpText>
    <label>CPE ID</label>
    <type>TextArea</type>
</CustomField>