force-app/main/default/objects/Activation_line__c/fields/CPE_ID_existing__c.field-meta.xml
<CustomField>
    <fullName>CPE_ID_existing__c</fullName>
    <description>To accommodate order form to tech</description>
    <inlineHelpText>TN number of the old Telia CPE to be moved</inlineHelpText>
    <label>CPE ID (existing)</label>
    <type>TextArea</type>
</CustomField>