force-app/main/default/objects/Activation_line__c/fields/CPE_model__c.field-meta.xml
<CustomField>
    <fullName>CPE_model__c</fullName>
    <label>CPE model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>