force-app/main/default/objects/Activation_line__c/fields/CPE_model_old__c.field-meta.xml
<CustomField>
    <fullName>CPE_model_old__c</fullName>
    <description>To accommodate order form to tech</description>
    <formula>IF(CONTAINS(Product__c, &apos;Telia Internet DSL&apos;), &apos;Technicolor TG799&apos;,
IF(CONTAINS(Product__c, &apos;Telia Internet Fiber&apos;), &apos;Cisco C1111-8P&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Choose a valid CPE model from the product catalog</inlineHelpText>
    <label>CPE model Deprecated</label>
    <type>Text</type>
</CustomField>