force-app/main/default/objects/Activation_line__c/fields/Customer_AS_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_AS_Number__c</fullName>
    <inlineHelpText>Mandatory for BGP routing</inlineHelpText>
    <label>Customer AS Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>