force-app/main/default/objects/Activation_line__c/fields/Delivery_Att__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Att__c</fullName>
    <inlineHelpText>Enter a specific person/department that will need to receive the simcards</inlineHelpText>
    <label>Delivery Att.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>