force-app/main/default/objects/Activation_line__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <label>Delivery City</label>
    <type>TextArea</type>
</CustomField>