force-app/main/default/objects/Activation_line__c/fields/Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country__c</fullName>
    <defaultValue>&apos;Danmark&apos;</defaultValue>
    <inlineHelpText>Always defaults to Danmark - however can be changed</inlineHelpText>
    <label>Delivery Country</label>
    <type>TextArea</type>
</CustomField>