force-app/main/default/objects/Activation_line__c/fields/Delivery_Email__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Email__c</fullName>
    <inlineHelpText>Email address required for the track and trace of the sim card parcel</inlineHelpText>
    <label>Delivery Email</label>
    <type>Email</type>
</CustomField>