force-app/main/default/objects/Activation_line__c/fields/Delivery_Street_and_number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street_and_number__c</fullName>
    <inlineHelpText>Enter name of street, number and any other indication on floor etc</inlineHelpText>
    <label>Delivery Street and number</label>
    <type>TextArea</type>
</CustomField>