force-app/main/default/objects/Activation_line__c/fields/DHCP__c.field-meta.xml
<CustomField>
    <fullName>DHCP__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>DHCP</label>
    <type>TextArea</type>
</CustomField>