force-app/main/default/objects/Activation_line__c/fields/DHCP_DNS_Primary__c.field-meta.xml
<CustomField>
    <fullName>DHCP_DNS_Primary__c</fullName>
    <description>Internet Pro</description>
    <label>DHCP DNS  Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>