force-app/main/default/objects/Activation_line__c/fields/DIY_Installation__c.field-meta.xml
<CustomField>
    <fullName>DIY_Installation__c</fullName>
    <formula>NOT ( Plug_Technician_Required__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIY Installation</label>
    <type>Checkbox</type>
</CustomField>