force-app/main/default/objects/Activation_line__c/fields/Dynamic_Static_Routing__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Static_Routing__c</fullName>
    <label>Dynamic Static Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BGP</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>