force-app/main/default/objects/Activation_line__c/fields/EAN_number__c.field-meta.xml
<CustomField>
    <fullName>EAN_number__c</fullName>
    <inlineHelpText>Enter the public 13 digit EAN number</inlineHelpText>
    <label>EAN number</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>