force-app/main/default/objects/Activation_line__c/fields/EAN_number_F__c.field-meta.xml
<CustomField>
    <fullName>EAN_number_F__c</fullName>
    <formula>Billing_Account__r.EAN_Number__c</formula>
    <label>EAN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>