force-app/main/default/objects/Activation_line__c/fields/eBuy_PR_no__c.field-meta.xml
<CustomField>
    <fullName>eBuy_PR_no__c</fullName>
    <label>eBuy PR no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>