force-app/main/default/objects/Activation_line__c/fields/eID__c.field-meta.xml
<CustomField>
    <fullName>eID__c</fullName>
    <description>eSim number</description>
    <label>eID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>