force-app/main/default/objects/Activation_line__c/fields/Ekstra_Data_SIM_number_2__c.field-meta.xml
<CustomField>
    <fullName>Ekstra_Data_SIM_number_2__c</fullName>
    <label>Ekstra Data SIM number 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>