force-app/main/default/objects/Activation_line__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>Customer internal employee, used for Home Office</description>
    <label>Employee Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>