force-app/main/default/objects/Activation_line__c/fields/Erhvervsinternet_SLA__c.field-meta.xml
<CustomField>
    <fullName>Erhvervsinternet_SLA__c</fullName>
    <label>Erhvervsinternet SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
                <default>true</default>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>