force-app/main/default/objects/Activation_line__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to escalate an Activation Line on a Case. Flow will trigger an email.</description>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>