force-app/main/default/objects/Activation_line__c/fields/eSim__c.field-meta.xml
<CustomField>
    <fullName>eSim__c</fullName>
    <description>eSim has been selected</description>
    <label>eSim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>