force-app/main/default/objects/Activation_line__c/fields/eSim_Link__c.field-meta.xml
<CustomField>
    <fullName>eSim_Link__c</fullName>
    <description>Link/Url for the eSim provided by RPA</description>
    <label>eSim Link</label>
    <type>TextArea</type>
</CustomField>