force-app/main/default/objects/Activation_line__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <label>Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exchange</valueSetName>
    </valueSet>
</CustomField>