force-app/main/default/objects/Activation_line__c/fields/Existing_SIM_number__c.field-meta.xml
<CustomField>
    <fullName>Existing_SIM_number__c</fullName>
    <inlineHelpText>Only to be added if number is to be transferred from existing Operator</inlineHelpText>
    <label>Existing SIM number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>