force-app/main/default/objects/Activation_line__c/fields/Extra_ACD_k__c.field-meta.xml
<CustomField>
    <fullName>Extra_ACD_k__c</fullName>
    <inlineHelpText>Enter type of extra ACD kø here and indicate the number in the below field. If there are more than 1 type of the extra ACD kø then it needs to be handled manually</inlineHelpText>
    <label>Extra ACD queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UC_ACD_K</valueSetName>
    </valueSet>
</CustomField>