force-app/main/default/objects/Activation_line__c/fields/Extra_ACD_k_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Extra_ACD_k_Quantity__c</fullName>
    <inlineHelpText>Add quantity of extra ACD kø&apos;er that is needed on top of the main ACD kø</inlineHelpText>
    <label>Extra ACD queue Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>