force-app/main/default/objects/Activation_line__c/fields/Extra_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Extra_Contact_Person__c</fullName>
    <inlineHelpText>Extra &apos;telefoni&apos; ansvarlig på Telia standard service pakke. Add the extra number of phone responsible and add these as contacts on the Account with indication of phone contact</inlineHelpText>
    <label>Extra Contact Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>