force-app/main/default/objects/Activation_line__c/fields/Fastnet_no_Type__c.field-meta.xml
<CustomField>
    <fullName>Fastnet_no_Type__c</fullName>
    <inlineHelpText>Enter fastnet number type if part of solution</inlineHelpText>
    <label>Fastnet no Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fastnet_no_Type</valueSetName>
    </valueSet>
</CustomField>