force-app/main/default/objects/Activation_line__c/fields/Fastnet_user__c.field-meta.xml
<CustomField>
    <fullName>Fastnet_user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate in the Onboarding Portal if the user is a Fastnet user.</description>
    <label>Fastnet user</label>
    <type>Checkbox</type>
</CustomField>