force-app/main/default/objects/Activation_line__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <inlineHelpText>Indicate fax if part to solution on mobil or fastnet</inlineHelpText>
    <label>Fax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fax</valueSetName>
    </valueSet>
</CustomField>